--- a/.luarc.json
+++ b/.luarc.json
@@ -1,6 +1,4 @@
 {
-    "workspace.library": [
-        "${3rd}/luassert/library"
-    ],
+    "workspace.library": [],
     "workspace.checkThirdParty": false
 }
