--- a/darwin/homebrew/Brewfile
+++ b/darwin/homebrew/Brewfile
@@ -5,6 +5,7 @@ tap "homebrew/cask-versions"
 tap "homebrew/core"
 tap "homebrew/services"
 tap "espanso/espanso"
+cask "anytype"
 cask "appcleaner"
 cask "bartender"
 cask "bettertouchtool"
@@ -12,13 +13,10 @@ cask "brave-browser"
 cask "discord"
 cask "espanso"
 cask "hammerspoon"
-cask "qlmarkdown"
-cask "quicklook-csv"
 cask "raycast"
-cask "tableplus"
 cask "the-unarchiver"
 cask "visual-studio-code"
-cask "wezterm"
+cask "wezterm-nightly"
 cask "zoom"
 cask "font-udev-gothic"
 cask "font-udev-gothic-nf"
