--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -10,7 +10,7 @@ pull_request_rules:
     actions:
       queue:
         name: default
-        method: merge
+        merge_method: squash
         update_method: merge
   - name: Automatic update
     conditions:
@@ -21,5 +21,5 @@ pull_request_rules:
 
 queue_rules:
   - name: default
-    conditions:
+    merge_conditions:
       - "check-success=build"
